--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -119,6 +119,8 @@
     <Compile Include="ViewControllers\HomeViewController.cs" />
     <Compile Include="ViewControllers\SignInViewController.cs" />
     <Compile Include="ViewControllers\RegisterViewController.cs" />
+    <Compile Include="ViewControllers\BaseUserValidationViewController.cs" />
+    <Compile Include="ViewControllers\BaseViewController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
