--- a/BarBot/BarBot.Test/BarBot.Test.csproj
+++ b/BarBot/BarBot.Test/BarBot.Test.csproj
@@ -33,6 +33,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="JsonModelTest.cs" />
+    <Compile Include="WebSocketTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BarBot\BarBot.csproj">
