--- a/BarBot/iOS/packages.config
+++ b/BarBot/iOS/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Square.SocketRocket" version="0.5.0.1" targetFramework="xamarinios10" />
   <package id="Websockets.Pcl" version="1.1.9" targetFramework="xamarinios10" developmentDependency="true" />
 </packages>
