--- a/BarBot/BarBot.UWP/project.json
+++ b/BarBot/BarBot.UWP/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Newtonsoft.Json": "9.0.1",
+    "SQLite.Net-PCL": "3.1.1",
     "Websockets.Pcl": "1.1.9"
   },
   "frameworks": {
