CollectionView displaying Recipes

--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Menu\MenuCollectionViewController.cs" />
     <Compile Include="Menu\RecipeCell.cs" />
+    <Compile Include="Menu\MenuSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Images\180iphoneapp.png" />
