--- a/BarBot/iOS/Info.plist
+++ b/BarBot/iOS/Info.plist
@@ -42,5 +42,11 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcons.appiconset</string>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>JuliusSansOne-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
