--- a/BarBot/iOS/Info.plist
+++ b/BarBot/iOS/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleName</key>
 	<string>BarBot</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.drinkapp.barbot</string>
+	<string>com.barbot.drinkapp</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
