--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -102,6 +102,24 @@
       <HintPath>..\packages\Square.SocketRocket.0.5.0.1\lib\Xamarin.iOS\Square.SocketRocket.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Reactive.Interfaces">
+      <HintPath>..\packages\Rx-Interfaces.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Core">
+      <HintPath>..\packages\Rx-Core.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Linq">
+      <HintPath>..\packages\Rx-Linq.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.PlatformServices">
+      <HintPath>..\packages\Rx-PlatformServices.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.PlatformServices.dll</HintPath>
+    </Reference>
+    <Reference Include="Splat">
+      <HintPath>..\packages\Splat.1.4.0\lib\Portable-net45+win+wpa81+wp80\Splat.dll</HintPath>
+    </Reference>
+    <Reference Include="ReactiveUI">
+      <HintPath>..\packages\reactiveui-core.7.0.0\lib\Xamarin.iOS10\ReactiveUI.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BarBot\BarBot.csproj">
@@ -115,11 +133,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
-    <Folder Include="ViewControllers\" />
     <Folder Include="Assets.xcassets\BarBotLogo.imageset\" />
     <Folder Include="Images\" />
-    <Folder Include="Menu\" />
-    <Folder Include="Order\" />
+    <Folder Include="ViewModel\" />
+    <Folder Include="View\" />
+    <Folder Include="View\Menu\" />
+    <Folder Include="View\Order\" />
+    <Folder Include="View\Login\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -132,18 +152,19 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="ViewControllers\HomeViewController.cs" />
-    <Compile Include="ViewControllers\SignInViewController.cs" />
-    <Compile Include="ViewControllers\RegisterViewController.cs" />
-    <Compile Include="ViewControllers\BaseUserValidationViewController.cs" />
-    <Compile Include="ViewControllers\BaseViewController.cs" />
     <Compile Include="Color.cs" />
-    <Compile Include="Menu\RecipeCell.cs" />
-    <Compile Include="Menu\MenuSource.cs" />
-    <Compile Include="Menu\GridLayout.cs" />
-    <Compile Include="Order\RecipeDetailViewController.cs" />
     <Compile Include="BarBotNavigationController.cs" />
-    <Compile Include="Menu\MenuCollectionViewController.cs" />
+    <Compile Include="View\Menu\GridLayout.cs" />
+    <Compile Include="View\Menu\MenuCollectionViewController.cs" />
+    <Compile Include="View\Menu\MenuSource.cs" />
+    <Compile Include="View\Menu\RecipeCell.cs" />
+    <Compile Include="View\Order\RecipeDetailViewController.cs" />
+    <Compile Include="View\Login\BaseUserValidationViewController.cs" />
+    <Compile Include="View\Login\BaseViewController.cs" />
+    <Compile Include="View\Login\HomeViewController.cs" />
+    <Compile Include="View\Login\RegisterViewController.cs" />
+    <Compile Include="View\Login\SignInViewController.cs" />
+    <Compile Include="ViewModel\RecipeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Microsoft-Yi-Baiti.ttf" />
