--- a/BarBot/iOS/packages.config
+++ b/BarBot/iOS/packages.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="reactiveui" version="7.0.0" targetFramework="xamarinios10" />
+  <package id="reactiveui-core" version="7.0.0" targetFramework="xamarinios10" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Splat" version="1.4.0" targetFramework="xamarinios10" />
   <package id="Square.SocketRocket" version="0.5.0.1" targetFramework="xamarinios10" />
   <package id="Websockets.Pcl" version="1.1.9" targetFramework="xamarinios10" developmentDependency="true" />
 </packages>
