--- a/BarBot/BarBot/packages.config
+++ b/BarBot/BarBot/packages.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
+  <package id="reactiveui" version="7.0.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="reactiveui-core" version="7.0.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Splat" version="1.4.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Websockets.Pcl" version="1.1.9" targetFramework="portable45-net45+win8+wp8" developmentDependency="true" />
 </packages>
