64 bit architecture for app, storyboards will be used for remaining screens

--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -25,7 +25,7 @@
     <MtouchUseSGen>true</MtouchUseSGen>
     <MtouchUseRefCounting>true</MtouchUseRefCounting>
     <MtouchLink>None</MtouchLink>
-    <MtouchArch>i386</MtouchArch>
+    <MtouchArch>x86_64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
     <MtouchTlsProvider>Default</MtouchTlsProvider>
     <PlatformTarget>x86</PlatformTarget>
@@ -142,7 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
-    <InterfaceDefinition Include="Main.storyboard" />
+    <InterfaceDefinition Include="View\Order\Order.storyboard" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -155,23 +155,17 @@
     <Compile Include="Color.cs" />
     <Compile Include="View\Menu\GridLayout.cs" />
     <Compile Include="View\Menu\MenuSource.cs" />
-    <Compile Include="View\Order\RecipeDetailViewController.cs" />
     <Compile Include="View\Login\BaseUserValidationViewController.cs" />
     <Compile Include="View\Login\BaseViewController.cs" />
     <Compile Include="View\Login\HomeViewController.cs" />
     <Compile Include="View\Login\RegisterViewController.cs" />
     <Compile Include="View\Login\SignInViewController.cs" />
     <Compile Include="BarBotNavigationController.cs" />
-    <Compile Include="BarBotNavigationController.designer.cs">
-      <DependentUpon>BarBotNavigationController.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\Menu\RecipeCell.cs" />
-    <Compile Include="View\Menu\RecipeCell.designer.cs">
-      <DependentUpon>RecipeCell.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\Menu\MenuCollectionViewController.cs" />
-    <Compile Include="View\Menu\MenuCollectionViewController.designer.cs">
-      <DependentUpon>MenuCollectionViewController.cs</DependentUpon>
+    <Compile Include="View\Order\RecipeDetailViewController.cs" />
+    <Compile Include="View\Order\RecipeDetailViewController.designer.cs">
+      <DependentUpon>RecipeDetailViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
