--- a/BarBot/BarBot/packages.config
+++ b/BarBot/BarBot/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MvvmCross" version="4.4.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="MvvmCross.Binding" version="4.4.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="MvvmCross.Core" version="4.4.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="MvvmCross.Platform" version="4.4.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
   <package id="reactiveui" version="7.0.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="reactiveui-core" version="7.0.0" targetFramework="portable45-net45+win8+wp8" />
