--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -143,12 +143,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BarBot\BarBot.csproj">
-      <Project>{641AE0D1-CEBF-42A6-A504-C8E9889C648F}</Project>
-      <Name>BarBot</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\Contents.json" />
   </ItemGroup>
@@ -156,14 +150,16 @@
     <Folder Include="Resources\" />
     <Folder Include="Assets.xcassets\BarBotLogo.imageset\" />
     <Folder Include="Images\" />
-    <Folder Include="View\" />
-    <Folder Include="View\Menu\" />
-    <Folder Include="View\Order\" />
-    <Folder Include="View\Login\" />
+    <Folder Include="Views\" />
+    <Folder Include="Views\Menu\" />
+    <Folder Include="Views\Order\" />
+    <Folder Include="Views\Login\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
-    <InterfaceDefinition Include="View\Order\Order.storyboard" />
+    <InterfaceDefinition Include="Views\Order\Order.storyboard" />
+    <InterfaceDefinition Include="Views\DrinkMenuView.xib" />
+    <InterfaceDefinition Include="Views\DrinkDetailView.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -174,31 +170,46 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Color.cs" />
-    <Compile Include="View\Menu\GridLayout.cs" />
-    <Compile Include="View\Menu\MenuSource.cs" />
-    <Compile Include="View\Login\BaseUserValidationViewController.cs" />
-    <Compile Include="View\Login\BaseViewController.cs" />
-    <Compile Include="View\Login\HomeViewController.cs" />
-    <Compile Include="View\Login\RegisterViewController.cs" />
-    <Compile Include="View\Login\SignInViewController.cs" />
+    <Compile Include="Views\Menu\GridLayout.cs" />
+    <Compile Include="Views\Menu\MenuSource.cs" />
+    <Compile Include="Views\Login\BaseUserValidationViewController.cs" />
+    <Compile Include="Views\Login\BaseViewController.cs" />
+    <Compile Include="Views\Login\HomeViewController.cs" />
+    <Compile Include="Views\Login\RegisterViewController.cs" />
+    <Compile Include="Views\Login\SignInViewController.cs" />
     <Compile Include="BarBotNavigationController.cs" />
-    <Compile Include="View\Menu\RecipeCollectionViewCell.cs" />
-    <Compile Include="View\Menu\MenuCollectionViewController.cs" />
-    <Compile Include="View\Order\RecipeDetailViewController.cs" />
-    <Compile Include="View\Order\RecipeDetailViewController.designer.cs">
+    <Compile Include="Views\Menu\RecipeCollectionViewCell.cs" />
+    <Compile Include="Views\Menu\MenuCollectionViewController.cs" />
+    <Compile Include="Views\Order\RecipeDetailViewController.cs" />
+    <Compile Include="Views\Order\RecipeDetailViewController.designer.cs">
       <DependentUpon>RecipeDetailViewController.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Order\IngredientTableViewCell.cs" />
-    <Compile Include="View\Order\IngredientTableViewCell.designer.cs">
+    <Compile Include="Views\Order\IngredientTableViewCell.cs" />
+    <Compile Include="Views\Order\IngredientTableViewCell.designer.cs">
       <DependentUpon>IngredientTableViewCell.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Order\IngredientTableViewDataSource.cs" />
+    <Compile Include="Views\Order\IngredientTableViewDataSource.cs" />
+    <Compile Include="Setup.cs" />
+    <Compile Include="Views\DrinkMenuView.cs" />
+    <Compile Include="Views\DrinkMenuView.designer.cs">
+      <DependentUpon>DrinkMenuView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\DrinkDetailView.cs" />
+    <Compile Include="Views\DrinkDetailView.designer.cs">
+      <DependentUpon>DrinkDetailView.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Microsoft-Yi-Baiti.ttf" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\navigation_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BarBot\BarBot.Core.csproj">
+      <Project>{641AE0D1-CEBF-42A6-A504-C8E9889C648F}</Project>
+      <Name>BarBot.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
