--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -26,10 +26,11 @@
     <MtouchUseRefCounting>true</MtouchUseRefCounting>
     <MtouchLink>None</MtouchLink>
     <MtouchArch>x86_64</MtouchArch>
-    <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
+    <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
     <MtouchTlsProvider>Default</MtouchTlsProvider>
     <PlatformTarget>x86</PlatformTarget>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+    <MtouchExtraArgs></MtouchExtraArgs>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <Optimize>true</Optimize>
@@ -101,45 +102,8 @@
     <Reference Include="Square.SocketRocket">
       <HintPath>..\packages\Square.SocketRocket.0.5.0.1\lib\Xamarin.iOS\Square.SocketRocket.dll</HintPath>
     </Reference>
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Reactive.Interfaces">
-      <HintPath>..\packages\Rx-Interfaces.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Interfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Reactive.Core">
-      <HintPath>..\packages\Rx-Core.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Reactive.Linq">
-      <HintPath>..\packages\Rx-Linq.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Linq.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Reactive.PlatformServices">
-      <HintPath>..\packages\Rx-PlatformServices.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.PlatformServices.dll</HintPath>
-    </Reference>
     <Reference Include="Splat">
-      <HintPath>..\packages\Splat.1.4.0\lib\Portable-net45+win+wpa81+wp80\Splat.dll</HintPath>
-    </Reference>
-    <Reference Include="ReactiveUI">
-      <HintPath>..\packages\reactiveui-core.7.0.0\lib\Xamarin.iOS10\ReactiveUI.dll</HintPath>
-    </Reference>
-    <Reference Include="MvvmCross.Platform">
-      <HintPath>..\packages\MvvmCross.Platform.4.4.0\lib\Xamarin.iOS10\MvvmCross.Platform.dll</HintPath>
-    </Reference>
-    <Reference Include="MvvmCross.Platform.iOS">
-      <HintPath>..\packages\MvvmCross.Platform.4.4.0\lib\Xamarin.iOS10\MvvmCross.Platform.iOS.dll</HintPath>
-    </Reference>
-    <Reference Include="MvvmCross.Core">
-      <HintPath>..\packages\MvvmCross.Core.4.4.0\lib\Xamarin.iOS10\MvvmCross.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="MvvmCross.iOS">
-      <HintPath>..\packages\MvvmCross.Core.4.4.0\lib\Xamarin.iOS10\MvvmCross.iOS.dll</HintPath>
-    </Reference>
-    <Reference Include="MvvmCross.Binding">
-      <HintPath>..\packages\MvvmCross.Binding.4.4.0\lib\Xamarin.iOS10\MvvmCross.Binding.dll</HintPath>
-    </Reference>
-    <Reference Include="MvvmCross.Binding.iOS">
-      <HintPath>..\packages\MvvmCross.Binding.4.4.0\lib\Xamarin.iOS10\MvvmCross.Binding.iOS.dll</HintPath>
-    </Reference>
-    <Reference Include="MvvmCross.Localization">
-      <HintPath>..\packages\MvvmCross.Binding.4.4.0\lib\Xamarin.iOS10\MvvmCross.Localization.dll</HintPath>
+      <HintPath>..\packages\Splat.2.0.0\lib\Xamarin.iOS10\Splat.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -151,13 +115,9 @@
     <Folder Include="Assets.xcassets\BarBotLogo.imageset\" />
     <Folder Include="Images\" />
     <Folder Include="Views\" />
-    <Folder Include="Views\Menu\" />
-    <Folder Include="Views\Order\" />
-    <Folder Include="Views\Login\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
-    <InterfaceDefinition Include="Views\Order\Order.storyboard" />
     <InterfaceDefinition Include="Views\DrinkMenuView.xib" />
     <InterfaceDefinition Include="Views\DrinkDetailView.xib" />
   </ItemGroup>
@@ -170,32 +130,13 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Color.cs" />
-    <Compile Include="Views\Menu\GridLayout.cs" />
-    <Compile Include="Views\Menu\MenuSource.cs" />
-    <Compile Include="Views\Login\BaseUserValidationViewController.cs" />
-    <Compile Include="Views\Login\BaseViewController.cs" />
-    <Compile Include="Views\Login\HomeViewController.cs" />
-    <Compile Include="Views\Login\RegisterViewController.cs" />
-    <Compile Include="Views\Login\SignInViewController.cs" />
-    <Compile Include="Views\Menu\RecipeCollectionViewCell.cs" />
-    <Compile Include="Views\Menu\MenuCollectionViewController.cs" />
-    <Compile Include="Views\Order\RecipeDetailViewController.cs" />
-    <Compile Include="Views\Order\RecipeDetailViewController.designer.cs">
-      <DependentUpon>RecipeDetailViewController.cs</DependentUpon>
+    <Compile Include="Views\DrinkMenuViewController.cs" />
+    <Compile Include="Views\DrinkMenuViewController.designer.cs">
+      <DependentUpon>DrinkMenuViewController.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Order\IngredientTableViewCell.cs" />
-    <Compile Include="Views\Order\IngredientTableViewCell.designer.cs">
-      <DependentUpon>IngredientTableViewCell.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Order\IngredientTableViewDataSource.cs" />
-    <Compile Include="Setup.cs" />
-    <Compile Include="Views\DrinkMenuView.cs" />
-    <Compile Include="Views\DrinkMenuView.designer.cs">
-      <DependentUpon>DrinkMenuView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\DrinkDetailView.cs" />
-    <Compile Include="Views\DrinkDetailView.designer.cs">
-      <DependentUpon>DrinkDetailView.cs</DependentUpon>
+    <Compile Include="Views\DrinkDetailViewController.cs" />
+    <Compile Include="Views\DrinkDetailViewController.designer.cs">
+      <DependentUpon>DrinkDetailViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
