--- a/BarBot/BarBot/packages.config
+++ b/BarBot/BarBot/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="portable45-net45+win8+wp8" />
+  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
   <package id="Splat" version="1.4.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Websockets.Pcl" version="1.1.9" targetFramework="portable45-net45+win8+wp8" developmentDependency="true" />
