added MvvmLight to iOS, removed old drink detail files, changed namespaces in Test project

--- a/BarBot/BarBot.Test/BarBot.Test.csproj
+++ b/BarBot/BarBot.Test/BarBot.Test.csproj
@@ -35,7 +35,7 @@
     <Compile Include="JsonModelTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BarBot\BarBot.csproj">
+    <ProjectReference Include="..\BarBot\BarBot.Core.csproj">
       <Project>{641AE0D1-CEBF-42A6-A504-C8E9889C648F}</Project>
       <Name>BarBot.Core</Name>
     </ProjectReference>
