--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -105,6 +105,18 @@
     <Reference Include="Splat">
       <HintPath>..\packages\Splat.2.0.0\lib\Xamarin.iOS10\Splat.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="GalaSoft.MvvmLight">
+      <HintPath>..\packages\MvvmLightLibs.5.3.0.0\lib\xamarin.ios10\GalaSoft.MvvmLight.dll</HintPath>
+    </Reference>
+    <Reference Include="GalaSoft.MvvmLight.Extras">
+      <HintPath>..\packages\MvvmLightLibs.5.3.0.0\lib\xamarin.ios10\GalaSoft.MvvmLight.Extras.dll</HintPath>
+    </Reference>
+    <Reference Include="GalaSoft.MvvmLight.Platform">
+      <HintPath>..\packages\MvvmLightLibs.5.3.0.0\lib\xamarin.ios10\GalaSoft.MvvmLight.Platform.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json" />
@@ -116,10 +128,10 @@
     <Folder Include="Images\" />
     <Folder Include="View\" />
     <Folder Include="View\Menu\" />
+    <Folder Include="View\Detail\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
-    <InterfaceDefinition Include="View\DrinkDetailView.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -130,17 +142,11 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Color.cs" />
-    <Compile Include="View\DrinkDetailViewController.cs" />
-    <Compile Include="View\DrinkDetailViewController.designer.cs">
-      <DependentUpon>DrinkDetailViewController.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\Menu\DrinkMenuViewController.cs" />
-    <Compile Include="View\Menu\DrinkMenuViewController.designer.cs">
-      <DependentUpon>DrinkMenuViewController.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\Menu\HexagonLayout.cs" />
     <Compile Include="View\Menu\MenuSource.cs" />
     <Compile Include="View\Menu\DrinkCell.cs" />
+    <Compile Include="View\Detail\DrinkDetailViewController.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Microsoft-Yi-Baiti.ttf" />
