--- a/BarBot/Droid/packages.config
+++ b/BarBot/Droid/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid60" />
+  <package id="Websockets.Pcl" version="1.1.9" targetFramework="monoandroid60" developmentDependency="true" />
 </packages>
