Websocket calls to get Ingredient List for Barbot

--- a/BarBot/BarBot/BarBot.Core.csproj
+++ b/BarBot/BarBot/BarBot.Core.csproj
@@ -42,6 +42,7 @@
     <Compile Include="ViewModel\DetailViewModel.cs" />
     <Compile Include="ViewModel\MenuViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="Model\IngredientList.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
