Added RecipeList and IngredientList objects, refactored WebSocket on_message handling, renamed Id’s to match WS responses

--- a/BarBot/BarBot/BarBot.Core.csproj
+++ b/BarBot/BarBot/BarBot.Core.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ViewModel\MenuViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="Model\IngredientList.cs" />
+    <Compile Include="Model\RecipeList.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
