Added extension to Navigation Service for Modal Popup Transition for Drink Detail

--- a/BarBot/BarBot/BarBot.Core.csproj
+++ b/BarBot/BarBot/BarBot.Core.csproj
@@ -44,6 +44,8 @@
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="Model\IngredientList.cs" />
     <Compile Include="Model\RecipeList.cs" />
+    <Compile Include="ViewModel\INavigationServiceExtension.cs" />
+    <Compile Include="ViewModel\NavigationServiceExtension.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
